tests/characterization/snapshots/characterization__command_help__cloud_local_start.snap
---
source: tests/characterization/main.rs
expression: "&help_output"
---
exit: 0
--- stdout ---
Usage:
  oqtopus cloud-local start <db|user|provider|admin|user_signup|worker|all>
  oqtopus cloud-local start <db|user|provider|admin|user_signup|worker> --foreground
--- stderr ---
--- end ---
