tests/characterization/snapshots/characterization__command_help__cloud_local_stop.snap
---
source: tests/characterization/main.rs
expression: "&help_output"
---
exit: 0
--- stdout ---
Usage:
  oqtopus cloud-local stop <db|user|provider|admin|user_signup|worker|all>
--- stderr ---
--- end ---
