tests/characterization/snapshots/characterization__command_help__completion.snap
---
source: tests/characterization/main.rs
expression: "context.run(args, 0)"
---
exit: 0
--- stdout ---
Usage:
  oqtopus completion <bash|zsh|fish>
--- stderr ---
--- end ---
