tests/characterization/snapshots/characterization__command_help__manager_install.snap
---
source: tests/characterization/main.rs
expression: "&help_output"
---
exit: 0
--- stdout ---
Usage:
  oqtopus manager install [version|branch:<branch>]
--- stderr ---
--- end ---
