tests/characterization/snapshots/characterization__command_help__manager_start.snap
---
source: tests/characterization/main.rs
expression: "&help_output"
---
exit: 0
--- stdout ---
Usage:
  oqtopus manager start
  oqtopus manager start --foreground
--- stderr ---
--- end ---
